--- a/app/admin/view/auth/group_list.html
+++ b/app/admin/view/auth/group_list.html
@@ -97,6 +97,9 @@
                         success: function(data){
                             if(data.code === 0){
                                 layer.msg('操作成功！')
+                                setTimeout(function () {
+                                    parent.layer.close(index);
+                                }, 2000);
                                 reload();
                             }else{
                                 layer.msg('操作失败！')
@@ -142,7 +145,9 @@
                         success:function (ret) {
                             layer.msg(ret['msg']);
                             if(ret['code'] == 0){
-                                layer.close(index)
+                                setTimeout(function () {
+                                    layer.close(index);
+                                }, 2000);
                                 reload();
                             }
                         }
