--- a/app/admin/view/index/index.html
+++ b/app/admin/view/index/index.html
@@ -28,7 +28,7 @@
                     <dd><a id="update_pwd">修改密码</a></dd>
                 </dl>
             </li>
-            <li class="layui-nav-item"><a href="">退出</a></li>
+            <li class="layui-nav-item"><a href="{:url('login/login_out')}">退出</a></li>
         </ul>
     </div>
 
